<?xml version="1.0"?>
<package format="2">
  <name>urg_hector_slam</name>
  <version>1.0.0</version>
  <description>The urg_hector_slam package</description>
  <maintainer email="louis@tmsuk.biz">LouisWangCW</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>laser_proc</depend>
  <depend>message_generation</depend>
  <depend>nodelet</depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>urg_c</depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>roslint</test_depend>
  <test_depend>roslaunch</test_depend>
  <export>
  </export>
</package>
