<?xml version="1.0"?>
<package>
  <name>urg_hector_slam</name>
  <version>0.0.1</version>
  <description>urg_hector_slam</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="louis780829@hotmail.com">LouisWangCW</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://github.com/LouisWangCW/urg_hector_slam</url>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="louis780829@hotmail.com">LouisWangCW</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urg_node</depend>
  <run_depend>hector_mapping</run_depend>
  <run_depend>hector_geotiff</run_depend>
  <run_depend>hector_trajectory_server</run_depend>
  <run_depend>hector_geotiff_plugins</run_depend>
  <run_depend>hokuyo_node</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rviz</run_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
